test with openjdk 15: result is different